multiply of 3 or 5 is done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     Practice
-    <script src="/2. DataStructures_HashTables/Exercise/First_Recurring_Character.js"></script>
+    <script src="/CodeWar/multiplyOf3Or5.js"></script>
   </body>
 </html>
