squareNsum is done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     Practice
-    <script src="/CodeWar/multiplyOf3Or5.js"></script>
+    <script src="/CodeWar/squareNSum.js"></script>
   </body>
 </html>
