reserse string is done with my better solution

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     Practice
-    <script src="/CodeWar/squareNSum.js"></script>
+    <script src="/CodeWar/reverseString.js"></script>
   </body>
 </html>
