repeat linked lists data structure from the beginning

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     Practice
-    <script src="/CodeWar/fakeBinary.js"></script>
+    <script src="/3. DataStructures_ LinkedLists/whatIsLinkedLists.js"></script>
   </body>
 </html>
