created print function for linked list, starting working on insert function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     Practice
-    <script src="/AsyncJS/asyncJs.js"></script>
+    <script src="/3. DataStructures_ LinkedLists/insert.js"></script>
   </body>
 </html>
