--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     Practice
-    <script src="/AsyncJS/fetch.js"></script>
+    <script src="/5. DataStructures: Trees/binaryTrees.js"></script>
   </body>
 </html>
