--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     Practice
-    <script src="/5. DataStructures: Trees/binaryTrees.js"></script>
+    <script src="/CodeWar/sumOfTwoLowestPositive.js"></script>
   </body>
 </html>
