--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     Practice
-    <script src="/CodeWar/sumOfTwoLowestPositive.js"></script>
+    <script src="/Master the Coding Interview/4. Interview Question #4 - Typed Out Strings/index.js"></script>
   </body>
 </html>
